finished all html pages (no css yet)

--- a/references.html
+++ b/references.html
@@ -13,5 +13,35 @@
             <a href="./references.html" class="active">References</a>
             <a href="./gallery.html">Gallery</a>
         </div>
+        <div class="references">
+            <h1>References</h1>
+            <ul class="ref_list">
+                <li class="ref_item">
+                    <a href="https://www.mckinsey.com/featured-insights/future-of-work/jobs-lost-jobs-gained-what-the-future-of-work-will-mean-for-jobs-skills-and-wages">
+                        Mckinsey report
+                    </a>
+                </li>
+                <li class="ref_item">
+                    <a href="https://www.ibm.com/topics/automation">
+                        IBM - What´s automation?
+                    </a>
+                </li>
+                <li class="ref_item">
+                    <a href="https://en.wikipedia.org/wiki/Automation">
+                        Wikipedia - automation
+                    </a>
+                </li>
+                <li class="ref_item">
+                    <a href="https://www.automation.com/">
+                        Latest automation news and articles
+                    </a>
+                </li>
+                <li class="ref_item">
+                    <a href="https://www.isa.org/about-isa/what-is-automation">
+                        ISA - What´s automation?
+                    </a>
+                </li>
+            </ul>
+        </div>
     </body>
 </html>
