--- a/gallery.html
+++ b/gallery.html
@@ -13,5 +13,14 @@
             <a href="./references.html">References</a>
             <a href="./gallery.html" class="active">Gallery</a>
         </div>
+        <h1>Gallery</h1>
+        <div class="gallery">
+            <img src="./auto_im1.png" alt="a web found automation image">
+            <img src="./auto_im2.png" alt="a web found automation image">
+            <img src="./auto_im3.png" alt="a web found automation image">
+            <img src="./auto_im4.png" alt="a web found automation image">
+            <img src="./auto_im5.png" alt="a web found automation image">
+            <img src="./auto_im6.png" alt="a web found automation image">
+        </div>
     </body>
 </html>
