complete, added css and final adjustments

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
             <a href="./gallery.html">Gallery</a>
         </div>
 
-        <img src="./automation_img1.png" alt="a hand pointing to and air projected screen with the word automation and other shapes">
-
-        <div class="info">
+        <div class="main">
+            <img src="./automation_img1.png" alt="a hand pointing to and air projected screen with the word automation and other shapes">
             <h2>What is automation</h2>
             <p>
                 According to <a href="https://www.ibm.com/topics/automation">IBM</a>, automation is a term for
