--- a/references.html
+++ b/references.html
@@ -13,7 +13,7 @@
             <a href="./references.html" class="active">References</a>
             <a href="./gallery.html">Gallery</a>
         </div>
-        <div class="references">
+        <div class="main">
             <h1>References</h1>
             <ul class="ref_list">
                 <li class="ref_item">
